Report almost done but code to clean

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -283,10 +283,7 @@
     "                dict_ea[size].append(result_ea)\n",
     "                dict_sa[size].append(result_sa)\n",
     "                dict_monte_carlo[size].append(result_monte_carlo)\n",
-    "    return dict_rls,dict_rls_restart,dict_ea,dict_sa,dict_monte_carlo\n",
-    "\n",
-    "# dict_rls,dict_rls_restart,dict_ea,dict_sa,dict_monte_carlo,dict_genetic=analyse(20000,5,N_interval=[101])\n",
-    "# genetic(N=53,population_size=100,mutation_ratio=1,crossover_ratio=0.5,keep_ratio=0.5)"
+    "    return dict_rls,dict_rls_restart,dict_ea,dict_sa,dict_monte_carlo"
    ]
   },
   {
@@ -296,77 +293,6 @@
    "outputs": [],
    "source": [
     "dict_rls,dict_rls_restart,dict_ea,dict_sa,dict_monte_carlo=analyse(2000,20,N_interval=[i for i in range(10,200,15)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time_rls=[]\n",
-    "time_rls_restart=[]\n",
-    "time_ea=[]\n",
-    "time_sa=[]\n",
-    "time_mc=[]\n",
-    "epochs=1000\n",
-    "for i in range(50):\n",
-    "    size=np.random.randint(10,200)\n",
-    "    a=time.time()\n",
-    "    result_rls=RLS(size,epochs)\n",
-    "    b=time.time()\n",
-    "    result_rls_restart=RLS_restart(size,epochs,restart=2)\n",
-    "    c=time.time()\n",
-    "    result_ea=EA(size,1/size,epochs)\n",
-    "    d=time.time()\n",
-    "    result_sa=simulated_annealing(size,1,epochs,t_max=15,t_growth=\"log\")\n",
-    "    e=time.time()\n",
-    "    result_monte_carlo=monte_carlo(size,depth=int(epochs/10),width=10)\n",
-    "    f=time.time()\n",
-    "    time_rls.append(b-a)\n",
-    "    time_rls_restart.append(c-b)\n",
-    "    time_ea.append(d-c)\n",
-    "    time_sa.append(e-d)\n",
-    "    time_mc.append(f-e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.boxplot([time_rls,time_rls_restart,time_ea,time_sa,time_mc],labels=[\"RLS\",\"RLS Restart\",\"EA\",\"SA\",\"Monte Carlo\"])\n",
-    "plt.ylabel(\"Seconds\")\n",
-    "plt.xlabel(\"Algorithms\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict_rls1,dict_rls_restart1,dict_ea1,dict_sa1,dict_monte_carlo1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.clf()\n",
-    "label=[\"RLS\",\"RLS restart\",\"EA\",\"SA\",\"Monte Carlo\"]\n",
-    "for index,dic in enumerate([dict_rls,dict_rls_restart,dict_ea,dict_sa,dict_monte_carlo]):\n",
-    "    a=[np.max(dic[i]) for i in range(10,200,15)]\n",
-    "    plt.plot([i for i in range(10,200,15)],a,\"*\",label=label[index])\n",
-    "plt.xticks([i for i in range(10,200,15)])\n",
-    "plt.legend()\n",
-    "plt.xlabel(\"Iterations\")\n",
-    "plt.ylabel(\"Merit Factor\")\n",
-    "plt.show()"
    ]
   }
  ],
