--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,32 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Project.ipynb, line 14)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[1;32m\"/home/gabriel/.local/lib/python3.5/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3265\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \u001b[1;32m\"<ipython-input-3-39efa7e1add4>\"\u001b[0m, line \u001b[1;32m1\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    from ipynb.fs.full.Project import *\n",
-      "  File \u001b[1;32m\"<frozen importlib._bootstrap>\"\u001b[0m, line \u001b[1;32m969\u001b[0m, in \u001b[1;35m_find_and_load\u001b[0m\n",
-      "  File \u001b[1;32m\"<frozen importlib._bootstrap>\"\u001b[0m, line \u001b[1;32m958\u001b[0m, in \u001b[1;35m_find_and_load_unlocked\u001b[0m\n",
-      "  File \u001b[1;32m\"<frozen importlib._bootstrap>\"\u001b[0m, line \u001b[1;32m673\u001b[0m, in \u001b[1;35m_load_unlocked\u001b[0m\n",
-      "  File \u001b[1;32m\"<frozen importlib._bootstrap_external>\"\u001b[0m, line \u001b[1;32m661\u001b[0m, in \u001b[1;35mexec_module\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/usr/local/lib/python3.5/dist-packages/ipynb/fs/full/__init__.py\"\u001b[0;36m, line \u001b[0;32m43\u001b[0;36m, in \u001b[0;35mget_code\u001b[0;36m\u001b[0m\n\u001b[0;31m    return self.source_to_code(code_from_ipynb(nb), self.path)\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/home/gabriel/Documents/MPRI/Optimization_and_Search_Heuristics/Project/Project.ipynb\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    \"import matplotlib.pyplot as plt\\n\",\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "from ipynb.fs.full.Project import *"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -385,6 +359,42 @@
     "    print(seq)\n",
     "#         break\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_rls=[]\n",
+    "time_rls_restart=[]\n",
+    "time_ea=[]\n",
+    "time_sa=[]\n",
+    "time_mc=[]\n",
+    "epochs=1000\n",
+    "for i in range(50):\n",
+    "    size=np.random.randint(10,200)\n",
+    "    a=time.time()\n",
+    "    result_rls=RLS(size,epochs)\n",
+    "    b=time.time()\n",
+    "    result_rls_restart=RLS_restart(size,epochs,restart=2)\n",
+    "    c=time.time()\n",
+    "    result_ea=EA(size,1/size,epochs)\n",
+    "    d=time.time()\n",
+    "    result_sa=simulated_annealing(size,1,epochs,t_max=15,t_growth=\"log\")\n",
+    "    e=time.time()\n",
+    "    result_monte_carlo=monte_carlo(size,depth=int(epochs/10),width=10)\n",
+    "    f=time.time()\n",
+    "    time_rls.append(b-a)\n",
+    "    time_rls_restart.append(c-b)\n",
+    "    time_ea.append(d-c)\n",
+    "    time_sa.append(e-d)\n",
+    "    time_mc.append(f-e)\n",
+    "plt.boxplot([time_rls,time_rls_restart,time_ea,time_sa,time_mc],labels=[\"RLS\",\"RLS Restart\",\"EA\",\"SA\",\"Monte Carlo\"])\n",
+    "plt.ylabel(\"Seconds\")\n",
+    "plt.xlabel(\"Algorithms\")\n",
+    "plt.show()"
    ]
   }
  ],
